# Trading_Bot

./: .gitignore  Readme.md  bootstrap_project.py  main.py  pyproject.toml
config/: backtest.yaml  backtest_model.yaml  dataset.yaml  ingest.yaml  strategy.yaml  train.yaml
data/raw/bitget/usdt-futures/BTCUSDT/15m/2025/12/: part-0.parquet
data/raw/bitget/usdt-futures/BTCUSDT/15m/2026/1/: part-0.parquet
notebooks/: temp.ipynb
runs/: latest_dataset_run.txt
runs/2026-01-06_20-47-56/: config_resolved.yaml
runs/2026-01-18_22-20-12/: config_resolved.yaml
runs/2026-01-18_22-20-15/: config_resolved.yaml
runs/2026-01-18_23-04-48/: config_resolved.yaml
src/backtest/: costs.py  engine.py  risk.py
src/cli/: backtest_model.py  build_dataset.py  ingest.py  train_model.py
src/data/: bitget_candles.py  bitget_client.py  fetch_binance.py  fetch_bitget.py  store.py  validate.py
src/dataset/: build_dataset.py
src/features/: build_features.py
src/labels/: triple_barrier.py
src/models/: predict.py  train_baseline.py  train_sequence.py
src/utils/: io.py  time.py
